# hellofluent

./: Cargo.toml  README.md
src/: main.rs
src/blendedapp/: .gitignore  Makefile.txt  README.md  cargo.txt  deploymentscript.ts  greetingtask.ts  hardhat.config.ts  hardhatconfig.ts  package.json
src/blendedapp/contracts/: GreetingWithWorld.sol  IFluentGreeting.sol
src/blendedapp/deploy/: 00_deploy_contracts.ts
src/blendedapp/hellorust/: cargo.txt  lib.rs
src/blendedapp/tasks/: greeting.ts
src/contract-templates/: erc20.sol  erc20per.vy  hello.sol  hello.vy
src/deployor/: deployor.js  package.json
src/js-template/: deploy.js  deployerc20.js  deployvy20.js  deployvyper.js  hardhat.config.js  hardhat.config.json  package.json
src/rust-template/: Cargo.toml  Cargo.txt  Makefile  erc20.rs  greeting.rs  lib.rs  stack.s
src/ts-template/: deploy.ts  deploy20vyper.ts  deployerc20.ts  deployvyper.ts  hardhat.config.ts  package.json  tsconfig.json
templates/contracts/: hello.sol  hellovyper.vy  vyper.sol
templates/js-template/: hardhat-config.json  package.json
templates/js-template/scripts/: deployvyper.js
templates/ts-template/scripts/: deploysol.ts  deployvyper.ts
testenv/: spinfluent
