[package]
name = "spinfluent"
version = "0.1.0"
edition = "2021"
description = "Tool for bootstrapping Fluent projects"
license = "MIT"
authors = ["protocolwhisper <protocol.eth@gmail.com>"]
repository = "https://github.com/protocolwhisper/spinfluent"
# Consider whether you really need the include field or what should be specified
# include = ["src/rust-template/**/*", "src/contract-templates/**/*", "src/js-template/**/*", "src/ts-template/**/*"]

[dependencies]
dialoguer = "0.11.0"

[[bin]]
name = "spinfluent"
path = "src/main.rs"
