[package]
name = "gblend"
version = "0.0.3"
edition = "2021"
description = "CLI tool for bootstrapping Fluent projects"
license = "MIT"
authors = ["protocolwhisper <protocol.eth@gmail.com>"]
repository = "https://github.com/fluentlabs-xyz/gblend"
# Consider whether you really need the include field or what should be specified
# include = ["src/rust-template/**/*", "src/contract-templates/**/*", "src/js-template/**/*", "src/ts-template/**/*"]

[dependencies]
dialoguer = "0.11.0"

[[bin]]
name = "gblend"
path = "src/main.rs"
