[package]
name = "greeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "main", default-features = false, features = ["evm"] }

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
strip = true


[features]
greeting = []

[dev-dependencies]
hex = "0.4.3"
serial_test = "2.0.0"
wat = "1.0.77"
